修改motion接收功能
