# openadk/models/voice_get_response.py
@@ -17,7 +17,7 @@ import re  # noqa: F401
 import six
 
 
-class VisionsPutResponse(object):
+class VoiceGetResponse(object):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -32,6 +32,7 @@ class VisionsPutResponse(object):
     """
     swagger_types = {
         'code': 'int',
+        'status': 'str',
         'timestamp': 'int',
         'data': 'object',
         'msg': 'str'
@@ -39,45 +40,48 @@ class VisionsPutResponse(object):
 
     attribute_map = {
         'code': 'code',
+        'status': 'status',
         'timestamp': 'timestamp',
         'data': 'data',
         'msg': 'msg'
     }
 
-    def __init__(self, code=None, timestamp=None, data=None, msg=None):  # noqa: E501
-        """VisionsPutResponse - a model defined in Swagger"""  # noqa: E501
+    def __init__(self, code=None, status=None, timestamp=None, data=None, msg=None):  # noqa: E501
+        """VoiceGetResponse - a model defined in Swagger"""  # noqa: E501
 
         self._code = None
+        self._status = None
         self._timestamp = None
         self._data = None
         self._msg = None
         self.discriminator = None
 
         self.code = code
+        if status is not None:
+            self.status = status
         if timestamp is not None:
             self.timestamp = timestamp
-        if data is not None:
-            self.data = data
+        self.data = data
         self.msg = msg
 
     @property
     def code(self):
-        """Gets the code of this VisionsPutResponse.  # noqa: E501
+        """Gets the code of this VoiceGetResponse.  # noqa: E501
 
-        错误码  # noqa: E501
+        返回码，0表示正常  # noqa: E501
 
-        :return: The code of this VisionsPutResponse.  # noqa: E501
+        :return: The code of this VoiceGetResponse.  # noqa: E501
         :rtype: int
         """
         return self._code
 
     @code.setter
     def code(self, code):
-        """Sets the code of this VisionsPutResponse.
+        """Sets the code of this VoiceGetResponse.
 
-        错误码  # noqa: E501
+        返回码，0表示正常  # noqa: E501
 
-        :param code: The code of this VisionsPutResponse.  # noqa: E501
+        :param code: The code of this VoiceGetResponse.  # noqa: E501
         :type: int
         """
         if code is None:
@@ -86,23 +90,50 @@ class VisionsPutResponse(object):
         self._code = code
 
     @property
+    def status(self):
+        """Gets the status of this VoiceGetResponse.  # noqa: E501
+
+
+        :return: The status of this VoiceGetResponse.  # noqa: E501
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status):
+        """Sets the status of this VoiceGetResponse.
+
+
+        :param status: The status of this VoiceGetResponse.  # noqa: E501
+        :type: str
+        """
+        allowed_values = ["idle", "running", "pause"]  # noqa: E501
+        if status not in allowed_values:
+            raise ValueError(
+                "Invalid value for `status` ({0}), must be one of {1}"  # noqa: E501
+                .format(status, allowed_values)
+            )
+
+        self._status = status
+
+    @property
     def timestamp(self):
-        """Gets the timestamp of this VisionsPutResponse.  # noqa: E501
+        """Gets the timestamp of this VoiceGetResponse.  # noqa: E501
 
-        视觉任务时间戳  # noqa: E501
+        时间戳, Unix标准时间  # noqa: E501
 
-        :return: The timestamp of this VisionsPutResponse.  # noqa: E501
+        :return: The timestamp of this VoiceGetResponse.  # noqa: E501
         :rtype: int
         """
         return self._timestamp
 
     @timestamp.setter
     def timestamp(self, timestamp):
-        """Sets the timestamp of this VisionsPutResponse.
+        """Sets the timestamp of this VoiceGetResponse.
 
-        视觉任务时间戳  # noqa: E501
+        时间戳, Unix标准时间  # noqa: E501
 
-        :param timestamp: The timestamp of this VisionsPutResponse.  # noqa: E501
+        :param timestamp: The timestamp of this VoiceGetResponse.  # noqa: E501
         :type: int
         """
 
@@ -110,43 +141,47 @@ class VisionsPutResponse(object):
 
     @property
     def data(self):
-        """Gets the data of this VisionsPutResponse.  # noqa: E501
+        """Gets the data of this VoiceGetResponse.  # noqa: E501
 
+        语音返回数据  # noqa: E501
 
-        :return: The data of this VisionsPutResponse.  # noqa: E501
+        :return: The data of this VoiceGetResponse.  # noqa: E501
         :rtype: object
         """
         return self._data
 
     @data.setter
     def data(self, data):
-        """Sets the data of this VisionsPutResponse.
+        """Sets the data of this VoiceGetResponse.
 
+        语音返回数据  # noqa: E501
 
-        :param data: The data of this VisionsPutResponse.  # noqa: E501
+        :param data: The data of this VoiceGetResponse.  # noqa: E501
         :type: object
         """
+        if data is None:
+            raise ValueError("Invalid value for `data`, must not be `None`")  # noqa: E501
 
         self._data = data
 
     @property
     def msg(self):
-        """Gets the msg of this VisionsPutResponse.  # noqa: E501
+        """Gets the msg of this VoiceGetResponse.  # noqa: E501
 
-        错误码消息  # noqa: E501
+        返回附件信息  # noqa: E501
 
-        :return: The msg of this VisionsPutResponse.  # noqa: E501
+        :return: The msg of this VoiceGetResponse.  # noqa: E501
         :rtype: str
         """
         return self._msg
 
     @msg.setter
     def msg(self, msg):
-        """Sets the msg of this VisionsPutResponse.
+        """Sets the msg of this VoiceGetResponse.
 
-        错误码消息  # noqa: E501
+        返回附件信息  # noqa: E501
 
-        :param msg: The msg of this VisionsPutResponse.  # noqa: E501
+        :param msg: The msg of this VoiceGetResponse.  # noqa: E501
         :type: str
         """
         if msg is None:
@@ -175,7 +210,7 @@ class VisionsPutResponse(object):
                 ))
             else:
                 result[attr] = value
-        if issubclass(VisionsPutResponse, dict):
+        if issubclass(VoiceGetResponse, dict):
             for key, value in self.items():
                 result[key] = value
 
@@ -191,7 +226,7 @@ class VisionsPutResponse(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, VisionsPutResponse):
+        if not isinstance(other, VoiceGetResponse):
             return False
 
         return self.__dict__ == other.__dict__
