# openadk/models/voice_iat_request.py
@@ -17,7 +17,7 @@ import re  # noqa: F401
 import six
 
 
-class MediaMusicOperation(object):
+class VoiceIatRequest(object):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -31,79 +31,44 @@ class MediaMusicOperation(object):
                             and the value is json key in definition.
     """
     swagger_types = {
-        'operation': 'str',
-        'name': 'str'
+        'timestamp': 'int'
     }
 
     attribute_map = {
-        'operation': 'operation',
-        'name': 'name'
+        'timestamp': 'timestamp'
     }
 
-    def __init__(self, operation='start', name='Sorry_sorry.mp3'):  # noqa: E501
-        """MediaMusicOperation - a model defined in Swagger"""  # noqa: E501
+    def __init__(self, timestamp=None):  # noqa: E501
+        """VoiceIatRequest - a model defined in Swagger"""  # noqa: E501
 
-        self._operation = None
-        self._name = None
+        self._timestamp = None
         self.discriminator = None
 
-        self.operation = operation
-        if name is not None:
-            self.name = name
+        if timestamp is not None:
+            self.timestamp = timestamp
 
     @property
-    def operation(self):
-        """Gets the operation of this MediaMusicOperation.  # noqa: E501
+    def timestamp(self):
+        """Gets the timestamp of this VoiceIatRequest.  # noqa: E501
 
-        播放控制  # noqa: E501
+        时间戳, Unix标准时间  # noqa: E501
 
-        :return: The operation of this MediaMusicOperation.  # noqa: E501
-        :rtype: str
+        :return: The timestamp of this VoiceIatRequest.  # noqa: E501
+        :rtype: int
         """
-        return self._operation
+        return self._timestamp
 
-    @operation.setter
-    def operation(self, operation):
-        """Sets the operation of this MediaMusicOperation.
+    @timestamp.setter
+    def timestamp(self, timestamp):
+        """Sets the timestamp of this VoiceIatRequest.
 
-        播放控制  # noqa: E501
+        时间戳, Unix标准时间  # noqa: E501
 
-        :param operation: The operation of this MediaMusicOperation.  # noqa: E501
-        :type: str
-        """
-        if operation is None:
-            raise ValueError("Invalid value for `operation`, must not be `None`")  # noqa: E501
-        allowed_values = ["start", "stop"]  # noqa: E501
-        if operation not in allowed_values:
-            raise ValueError(
-                "Invalid value for `operation` ({0}), must be one of {1}"  # noqa: E501
-                .format(operation, allowed_values)
-            )
-
-        self._operation = operation
-
-    @property
-    def name(self):
-        """Gets the name of this MediaMusicOperation.  # noqa: E501
-
-        音乐名称  # noqa: E501
-
-        :return: The name of this MediaMusicOperation.  # noqa: E501
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name):
-        """Sets the name of this MediaMusicOperation.
-
-        音乐名称  # noqa: E501
-
-        :param name: The name of this MediaMusicOperation.  # noqa: E501
-        :type: str
+        :param timestamp: The timestamp of this VoiceIatRequest.  # noqa: E501
+        :type: int
         """
 
-        self._name = name
+        self._timestamp = timestamp
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -126,7 +91,7 @@ class MediaMusicOperation(object):
                 ))
             else:
                 result[attr] = value
-        if issubclass(MediaMusicOperation, dict):
+        if issubclass(VoiceIatRequest, dict):
             for key, value in self.items():
                 result[key] = value
 
@@ -142,7 +107,7 @@ class MediaMusicOperation(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, MediaMusicOperation):
+        if not isinstance(other, VoiceIatRequest):
             return False
 
         return self.__dict__ == other.__dict__
